fix quiz and backend issues
